# anki_utils

./: Cargo.toml  README.md  anki_mastery.db  flashcards.csv  gen_text.py  logic.md  score.md  sentences.csv
backup/: youtube5_backup.apkg
src/: anki.rs  database.rs  design.md  gen_text.rs  llm.rs  main.rs  mastery.rs  utils.rs
