[package]
name = "anki_utils"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1.3"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "gen_text"
path = "src/gen_text.rs"

[[bin]]
name = "anki"
path = "src/anki.rs"
