[package]
name = "anki_utils"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1.3"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
hex = "0.4"

[[bin]]
name = "gen_text"
path = "src/gen_text.rs"

[[bin]]
name = "anki"
path = "src/anki.rs"

[[bin]]
name = "sync"
path = "src/main.rs"
